--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -129,7 +129,7 @@ a {
 /* Banner */
   .field-name-field-quotes {
     position: absolute;
-    width: 23%;
+    width: 300px;
     font-size: 2.813em;
     color: #fff;
     top: 9%;
