--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -31,3 +31,18 @@
     margin-right: 2.5%;
   }
 }
+
+/* Banner */
+.field-name-field-quotes {
+  position: absolute;
+  width: 300px;
+  font-size: 23px;
+  color: #fff;
+  top: 9%;
+  padding-left: 10%;
+  text-shadow: 1px 1px 1px #050505;
+  font-weight:700;
+  line-height:1.1;
+}
+
+
