--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -45,4 +45,18 @@
   line-height:1.1;
 }
 
+.block-news-frontpage-block {
+  .views-row {
+    margin-bottom:6px;
+    width:85%;
+    padding:4px;
+  }
+  .views-field-view-node a {
+    font-size: 1px;
+    width: 33px;
+    height: 35px;
+    background-size: 33px;
+  }
+}
+
 
