--- a/sites/all/themes/default/css/default-alpha-default-normal.css
+++ b/sites/all/themes/default/css/default-alpha-default-normal.css
@@ -12,4 +12,13 @@
   font-weight: 700;
   line-height: 1.1; }
 
+.block-news-frontpage-block .views-row {
+  margin-bottom: 8px;
+  width: 50%;
+  padding: 6px; }
+.block-news-frontpage-block .views-field-view-node a {
+  width: 36px;
+  height: 40px;
+  background-size: 37px; }
+
 /*# sourceMappingURL=default-alpha-default-normal.css.map */
