--- a/sites/all/themes/default/css/default-alpha-default-normal.scss
+++ b/sites/all/themes/default/css/default-alpha-default-normal.scss
@@ -14,3 +14,16 @@
   font-weight:700;
   line-height:1.1;
 }
+
+.block-news-frontpage-block {
+  .views-row {
+    margin-bottom:8px;
+    width:50%;
+    padding:6px;
+  }
+  .views-field-view-node a {
+    width: 36px;
+    height: 40px;
+    background-size: 37px;
+  }
+}
