--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -84,6 +84,7 @@ a {
     padding-right: 2%;
     float: left;
     margin: 0 auto;
+    width:23%;
   }
   .views-slideshow-controls-text-previous {
     display: block;
