--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -247,7 +247,8 @@ a {
   #block-views-sponsoren-block .views-row {
     padding-right: 2%;
     float: left;
-    margin: 0 auto; }
+    margin: 0 auto;
+    width: 23%; }
   #block-views-sponsoren-block .views-slideshow-controls-text-previous {
     display: block;
     position: absolute;
