--- a/sites/all/themes/default/css/default-alpha-default-normal.css
+++ b/sites/all/themes/default/css/default-alpha-default-normal.css
@@ -21,4 +21,12 @@
   height: 40px;
   background-size: 37px; }
 
+.front .zone-content-wrapper .block-main {
+  width: 70%; }
+  .front .zone-content-wrapper .block-main .node-front .field-name-field-film iframe {
+    width: 337px;
+    height: 230px; }
+.front .zone-content-wrapper .block-views-agenda-block {
+  width: 30%; }
+
 /*# sourceMappingURL=default-alpha-default-normal.css.map */
