--- a/sites/all/themes/default/css/default-alpha-default-normal.css
+++ b/sites/all/themes/default/css/default-alpha-default-normal.css
@@ -23,6 +23,10 @@
 
 .front .zone-content-wrapper .block-main {
   width: 70%; }
+  .front .zone-content-wrapper .block-main .group-left {
+    float: left;
+    width: 45%;
+    padding-right: 2%; }
   .front .zone-content-wrapper .block-main .node-front .field-name-field-film iframe {
     width: 337px;
     height: 230px; }
