--- a/sites/all/themes/default/css/default-alpha-default-normal.scss
+++ b/sites/all/themes/default/css/default-alpha-default-normal.scss
@@ -32,6 +32,11 @@
   .zone-content-wrapper {
     .block-main {
       width: 70%;
+      .group-left {
+        float: left;
+        width: 45%;
+        padding-right: 2%;
+      }
       .node-front {
         .field-name-field-film {
           iframe {
