--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -65,6 +65,7 @@
   height: 35px;
   background-size: 33px; }
 
+/* homepage */
 .front .zone-content-wrapper .block-main {
   width: 100%; }
   .front .zone-content-wrapper .block-main .group-left {
