--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -56,15 +56,17 @@
   font-weight: 700;
   line-height: 1.1; }
 
-.block-news-frontpage-block .views-row {
-  margin-bottom: 6px;
-  width: 85%;
-  padding: 4px; }
-.block-news-frontpage-block .views-field-view-node a {
-  font-size: 1px;
-  width: 33px;
-  height: 35px;
-  background-size: 33px; }
+.block-news-frontpage-block {
+  width: 50%; }
+  .block-news-frontpage-block .views-row {
+    margin-bottom: 6px;
+    width: 85%;
+    padding: 4px; }
+  .block-news-frontpage-block .views-field-view-node a {
+    font-size: 1px;
+    width: 33px;
+    height: 35px;
+    background-size: 33px; }
 
 /* homepage */
 .front .zone-content-wrapper .block-main {
