--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -57,15 +57,36 @@
   line-height: 1.1; }
 
 .block-news-frontpage-block {
-  width: 50%; }
+  display: inline-block;
+  width: 50%;
+  position: absolute;
+  right: 0;
+  top: 5%;
+  float: left; }
   .block-news-frontpage-block .views-row {
     margin-bottom: 6px;
     width: 85%;
-    padding: 4px; }
+    padding: 4px;
+    position: relative;
+    background-color: black;
+    background-color: rgba(0, 0, 0, 0.7);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)"; }
+    .block-news-frontpage-block .views-row .views-field-title a {
+      color: #fff;
+      text-transform: uppercase;
+      font-size: 15px; }
   .block-news-frontpage-block .views-field-view-node a {
     font-size: 1px;
+    content: "";
+    background: url("img/arrow.jpg") no-repeat 0 0;
     width: 33px;
+    display: inline-block;
     height: 35px;
+    float: left;
+    position: absolute;
+    top: 0;
+    right: 0;
     background-size: 33px; }
 
 /* homepage */
