--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -47,19 +47,44 @@
 }
 
 .block-news-frontpage-block {
+  display:inline-block;
   width:50%;
+  position: absolute;
+  right: 0;
+  top: 5%;
+  float:left;
   .views-row {
     margin-bottom:6px;
     width:85%;
     padding:4px;
+    position:relative;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.7);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)";
+    .views-field-title {
+      a {
+        color:#fff;
+        text-transform: uppercase;
+        font-size:15px;
+      }
+    }
   }
   .views-field-view-node a {
     font-size: 1px;
+    content: "";
+    background: url("img/arrow.jpg") no-repeat 0 0;
     width: 33px;
+    display: inline-block;
     height: 35px;
+    float: left;
+    position: absolute;
+    top: 0;
+    right: 0;
     background-size: 33px;
   }
 }
+
 
 /* homepage */
 .front {
