--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -289,36 +289,7 @@ a {
   display: none; }
 
 .block-news-frontpage-block {
-  position: absolute;
-  right: 0;
-  top: 5%;
-  width: 100%;
-  float: left; }
-  .block-news-frontpage-block .views-row {
-    margin-bottom: 8px;
-    position: relative;
-    width: 100%;
-    padding: 3px;
-    background-color: black;
-    background-color: rgba(0, 0, 0, 0.7);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000);
-    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)"; }
-    .block-news-frontpage-block .views-row .views-field-title a {
-      color: #fff;
-      text-transform: uppercase;
-      font-size: 15px; }
-  .block-news-frontpage-block .views-field-view-node a {
-    font-size: 1px;
-    content: "";
-    background: url("img/arrow.jpg") no-repeat 0 0;
-    width: 36px;
-    display: inline-block;
-    height: 40px;
-    float: left;
-    position: absolute;
-    top: 0;
-    right: 0;
-    background-size: 37px; }
+  display: none; }
 
 /* Nieuws */
 .block-superfish-2 {
