--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -134,41 +134,7 @@ a {
 
 
 .block-news-frontpage-block {
-  position: absolute;
-  right: 0;
-  top: 5%;
-  width: 100%;
-  float: left;
-  .views-row {
-    margin-bottom:8px;
-    position:relative;
-    width:100%;
-    padding:3px;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.7);
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000);
-    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)";
-    .views-field-title {
-      a {
-        color:#fff;
-        text-transform: uppercase;
-        font-size:15px;
-      }
-    }
-  }
-  .views-field-view-node a {
-    font-size: 1px;
-    content: "";
-    background: url("img/arrow.jpg") no-repeat 0 0;
-    width: 36px;
-    display: inline-block;
-    height: 40px;
-    float: left;
-    position: absolute;
-    top: 0;
-    right: 0;
-    background-size: 37px;
-  }
+  display:none;
 }
 
 /* Nieuws */
