--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -291,6 +291,9 @@ a {
 .block-news-frontpage-block {
   display: none; }
 
+.views-field-field-banner {
+  display: none; }
+
 /* Nieuws */
 .block-superfish-2 {
   float: left;
