--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -137,6 +137,10 @@ a {
   display:none;
 }
 
+.views-field-field-banner {
+  display:none;
+}
+
 /* Nieuws */
   .block-superfish-2 {
     float:left;
