--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -198,8 +198,8 @@ a {
         }
         .field-name-field-film {
           iframe {
-            width: 337px;
-            height: 230px;
+            width: 100%;
+            height:auto;
           }
         }
       }
