--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -89,6 +89,31 @@
   display:inline-block;
 }
 
+/* Slideshow */
+
+#block-views-sponsoren-block {
+  .views-slideshow-controls-text-previous {
+    top: 31%;
+    left: 0px;
+    background-size: 29px;
+    width: 41px;
+    height: 100px;
+  }
+  .views-slideshow-controls-text-next {
+    top: 31%;
+    right: 0px;
+    z-index: 100;
+    background-size: 29px;
+    width: 41px;
+    height: 100px;
+  }
+  .views-slideshow-controls-text-previous:hover {
+    background-size: 29px;
+  }
+  .views-slideshow-controls-text-next:hover {
+    background-size: 29px;
+  }
+}
 
 
 
