--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -94,12 +94,16 @@
 
 /* Slideshow */
 #block-views-sponsoren-block .views-slideshow-controls-text-previous {
-  background-size: 29px; }
+  background-size: 29px;
+  top: 14%; }
 #block-views-sponsoren-block .views-slideshow-controls-text-next {
-  background-size: 29px; }
+  background-size: 29px;
+  top: 14%; }
 #block-views-sponsoren-block .views-slideshow-controls-text-previous:hover {
-  background-size: 29px; }
+  background-size: 29px;
+  top: 14%; }
 #block-views-sponsoren-block .views-slideshow-controls-text-next:hover {
-  background-size: 29px; }
+  background-size: 29px;
+  top: 14%; }
 
 /*# sourceMappingURL=default-alpha-default-narrow.css.map */
