--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -94,15 +94,19 @@
 #block-views-sponsoren-block {
   .views-slideshow-controls-text-previous {
     background-size: 29px;
+    top:14%;
   }
   .views-slideshow-controls-text-next {
     background-size: 29px;
+    top:14%;
   }
   .views-slideshow-controls-text-previous:hover {
     background-size: 29px;
+    top:14%;
   }
   .views-slideshow-controls-text-next:hover {
     background-size: 29px;
+    top:14%;
   }
 }
 
