--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -285,7 +285,7 @@ a {
     height: 100px; }
 
 /* Banner */
-.field-name-field-quotes {
+.front .field-name-field-quotes {
   display: none; }
 
 .block-news-frontpage-block {
