--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -128,10 +128,11 @@ a {
 }
 
 /* Banner */
+.front {
   .field-name-field-quotes {
     display:none;
   }
-
+}
 
 .block-news-frontpage-block {
   display:none;
