--- a/sites/all/themes/default/css/default-alpha-default-normal.css
+++ b/sites/all/themes/default/css/default-alpha-default-normal.css
@@ -1,7 +1,7 @@
 /* This file will hold styles that are loaded using the same media query as the normal grid. */
 /* If you are using the default media queries provided by Omega, these styles will also
  *  apply to the widescreen layout unless they are overridden by the widescreen styles. */
-.field-name-field-quotes {
+.front .field-name-field-quotes {
   position: absolute;
   width: 300px;
   font-size: 2.813em;
