--- a/sites/all/themes/default/css/default-alpha-default-normal.css
+++ b/sites/all/themes/default/css/default-alpha-default-normal.css
@@ -33,4 +33,18 @@
 .front .zone-content-wrapper .block-views-agenda-block {
   width: 30%; }
 
+.view-zinema .views-row {
+  width: 33.3%;
+  height: 255px; }
+  .view-zinema .views-row iframe.media-youtube-player {
+    width: 305.5px;
+    height: 200px; }
+  .view-zinema .views-row .views-field-title {
+    width: 50%;
+    float: left; }
+  .view-zinema .views-row .views-field-field-catogorie {
+    width: 50%;
+    float: left;
+    color: #f78b1f; }
+
 /*# sourceMappingURL=default-alpha-default-normal.css.map */
