--- a/sites/all/themes/default/css/default-alpha-default-normal.scss
+++ b/sites/all/themes/default/css/default-alpha-default-normal.scss
@@ -53,3 +53,23 @@
     }
   }
 }
+
+.view-zinema {
+  .views-row {
+    width:33.3%;
+    height:255px;
+    iframe.media-youtube-player {
+      width:305.5px;
+      height:200px;
+    }
+    .views-field-title {
+      width:50%;
+      float:left;
+    }
+    .views-field-field-catogorie {
+      width:50%;
+      float:left;
+      color:$orange;
+    }
+  }
+}
