--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -405,12 +405,12 @@ a {
 .view-zinema {
   .views-row {
     margin-bottom:40px;
-    width:33.3%;
+    width:100%;
     float:left;
     height:255px;
     iframe.media-youtube-player {
-      width:305.5px;
-      height:200px;
+      width:100%;
+      height:auto;
     }
     .views-field-title {
       width:50%;
