--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -431,6 +431,13 @@ a {
   }
 }
 
+.node-zinema {
+  iframe.media-youtube-player {
+    width:100%;
+    height:auto;
+  }
+}
+
 .pager li.pager-next {
   a {
     width:70px;
