--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -140,6 +140,18 @@
   }
 }
 
+/* Contact */
+.context-contact {
+  .zone-postscript {
+    p {
+      margin-bottom:0;
+    }
+    iframe {
+      height:350px;
+    }
+  }
+}
+
 
 
 
