--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -511,5 +511,7 @@ a {
 /* Contact */
 .context-contact .zone-postscript p {
   margin-bottom: 0; }
+.context-contact .zone-postscript iframe {
+  height: 50px; }
 
 /*# sourceMappingURL=global.css.map */
