--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -131,4 +131,12 @@
 .context-contact .zone-postscript iframe {
   height: 350px; }
 
+.context-eventz .view-agenda .views-row {
+  width: 33.3%;
+  margin-bottom: 50px;
+  float: left;
+  position: relative;
+  box-sizing: border-box;
+  padding: 2%; }
+
 /*# sourceMappingURL=default-alpha-default-narrow.css.map */
