--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -152,6 +152,19 @@
   }
 }
 
+.context-eventz {
+  .view-agenda {
+    .views-row {
+      width:33.3%;
+      margin-bottom:50px;
+      float:left;
+      position:relative;
+      box-sizing:border-box;
+      padding:2%;
+    }
+  }
+}
+
 
 
 
