--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -161,6 +161,10 @@
       position:relative;
       box-sizing:border-box;
       padding:2%;
+      .field-name-field-inhoud {
+        text-align:center;
+        height:176px;
+      }
     }
   }
 }
