--- a/sites/all/themes/default/css/default-alpha-default-normal.scss
+++ b/sites/all/themes/default/css/default-alpha-default-normal.scss
@@ -59,3 +59,20 @@
     width:33.3%;
   }
 }
+
+.context-eventz {
+  .view-agenda {
+    .views-row {
+      width:33.3%;
+      margin-bottom:50px;
+      float:left;
+      position:relative;
+      box-sizing:border-box;
+      padding:2%;
+      .field-name-field-inhoud {
+        text-align:center;
+        height:150px;
+      }
+    }
+  }
+}
