--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -169,6 +169,15 @@
   }
 }
 
+.entity-paragraphs-item {
+  .field-name-field-video {
+    iframe {
+      width:100%;
+      height:auto;
+    }
+  }
+}
+
 
 
 
