--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -376,6 +376,12 @@ a {
       float:left;
     }
   }
+  .field-name-field-video {
+    iframe {
+      width:100%;
+      height:auto;
+    }
+  }
 }
 
 /* Zinema */
