--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -143,7 +143,7 @@
     height: 176px; }
 
 .entity-paragraphs-item .field-name-field-video iframe {
-  width: 100%;
-  height: auto; }
+  width: 640px;
+  height: 390px; }
 
 /*# sourceMappingURL=default-alpha-default-narrow.css.map */
