--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -172,8 +172,8 @@
 .entity-paragraphs-item {
   .field-name-field-video {
     iframe {
-      width:100%;
-      height:auto;
+      width:640px;
+      height:390px;
     }
   }
 }
