--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -70,6 +70,11 @@ a {
   }
 }
 
+#superfish-1-select {
+  background-color:#000;
+  color:#fff;
+}
+
 /* Slideshow */
 
 #block-views-sponsoren-block {
@@ -478,3 +483,5 @@ a {
     }
   }
 }
+
+
