--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -484,4 +484,23 @@ a {
   }
 }
 
+/* Sticky menu */
+.admin-menu{
+  .is-sticky {
+    .zone-branding-wrapper{
+      top: 29px !important;
+    }
+  }
+  .zone-branding-wrapper{
+    top: 28px;
+  }
+}
+
+.zone-branding-wrapper {
+  background-color: #fff;
+  position: absolute;
+  width: 100%;
+  z-index: 997;
+}
+
 
