--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -522,12 +522,12 @@ a {
   height: 180px; }
 
 /* Sticky menu */
-.admin-menu .is-sticky .zone-branding-wrapper {
+.admin-menu .is-sticky .zone-menu-wrapper {
   top: 29px !important; }
-.admin-menu .zone-branding-wrapper {
+.admin-menu .zone-menu-wrapper {
   top: 28px; }
 
-.zone-branding-wrapper {
+.zone-menu-wrapper {
   background-color: #fff;
   position: absolute;
   width: 100%;
