--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -205,7 +205,8 @@ a {
   background-color: #000; }
 
 #zone-branding-wrapper {
-  padding: 10px 0 20px 0; }
+  padding: 10px 0 20px 0;
+  background-color: #fff; }
 
 #zone-header {
   width: 100%; }
@@ -535,5 +536,10 @@ a {
 
 .is-sticky .zone-menu-wrapper {
   top: 0 !important; }
+
+/* Filmrecruitz */
+.context-filmrecruitzz #zone-branding-wrapper {
+  padding: 10px 0 20px 0;
+  background-color: #3989c9; }
 
 /*# sourceMappingURL=global.css.map */
