--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -541,5 +541,7 @@ a {
 .context-filmrecruitzz #zone-branding-wrapper {
   padding: 10px 0 20px 0;
   background-color: #3989c9; }
+.context-filmrecruitzz .zone-footer-wrapper {
+  background-color: #3989c9; }
 
 /*# sourceMappingURL=global.css.map */
