--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -517,5 +517,8 @@ a {
     padding:10px 0 20px 0;
     background-color:#3989c9;
   }
+  .zone-footer-wrapper {
+    background-color:#3989c9;
+  }
 }
 
