--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -543,5 +543,7 @@ a {
   background-color: #3989c9; }
 .context-filmrecruitzz .zone-footer-wrapper {
   background-color: #3989c9; }
+.context-filmrecruitzz .zone-content-wrapper {
+  background-image: url("img/bgfotoB.jpg"); }
 
 /*# sourceMappingURL=global.css.map */
