--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -520,5 +520,8 @@ a {
   .zone-footer-wrapper {
     background-color:#3989c9;
   }
+  .zone-content-wrapper {
+    background-image:url('img/bgfotoB.jpg');
+  }
 }
 
