--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -549,6 +549,10 @@ a {
   height: 0; }
 .context-filmrecruitzz .field-name-title h2 {
   color: #fff;
-  font-size: 60p; }
+  font-size: 60px; }
+.context-filmrecruitzz .field-name-field-inhoud2 .field-name-field-subititel {
+  color: #3989c9; }
+.context-filmrecruitzz .field-name-field-inhoud2 .field-name-field-tekst {
+  color: #fff; }
 
 /*# sourceMappingURL=global.css.map */
