--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -534,5 +534,13 @@ a {
       font-size:60px;
     }
   }
+  .field-name-field-inhoud2 {
+    .field-name-field-subititel {
+      color:#3989c9;
+    }
+    .field-name-field-tekst {
+      color:#fff;
+    }
+  }
 }
 
