--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -529,12 +529,15 @@ a {
     }
   }
   .field-name-title {
+    width:50%;
     h2 {
       color:#fff;
       font-size:60px;
+      font-weight:100;
     }
   }
   .field-name-field-inhoud2 {
+    width:50%;
     .field-name-field-subititel {
       color:#3989c9;
     }
