--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -530,6 +530,7 @@ a {
   }
   .field-name-title {
     width:50%;
+    text-align:center;
     h2 {
       color:#fff;
       font-size:60px;
@@ -537,6 +538,7 @@ a {
     }
   }
   .field-name-field-inhoud2 {
+    text-align:center;
     width:50%;
     .field-name-field-subititel {
       color:#3989c9;
