--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -558,7 +558,8 @@ a {
   text-align: center;
   width: 50%; }
   .context-filmrecruitzz .field-name-field-inhoud2 .field-name-field-subititel {
-    color: #3989c9; }
+    color: #3989c9;
+    font-size: 35px; }
   .context-filmrecruitzz .field-name-field-inhoud2 .field-name-field-tekst {
     color: #fff; }
 
