--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -542,6 +542,7 @@ a {
     width:50%;
     .field-name-field-subititel {
       color:#3989c9;
+      font-size:35px;
     }
     .field-name-field-tekst {
       color:#fff;
