--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -548,5 +548,14 @@ a {
       color:#fff;
     }
   }
+  .view-id-filmrecruitz {
+    .views-row {
+      width:33.3%;
+      float:left;
+      img {
+        float:left;
+      }
+    }
+  }
 }
 
