--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -562,5 +562,10 @@ a {
     font-size: 35px; }
   .context-filmrecruitzz .field-name-field-inhoud2 .field-name-field-tekst {
     color: #fff; }
+.context-filmrecruitzz .view-id-filmrecruitz .views-row {
+  width: 33.3%;
+  float: left; }
+  .context-filmrecruitzz .view-id-filmrecruitz .views-row img {
+    float: left; }
 
 /*# sourceMappingURL=global.css.map */
