--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -538,6 +538,12 @@ a {
   top: 0 !important; }
 
 /* Filmrecruitz */
+.context-filmrecruitz #zone-branding-wrapper {
+  padding: 10px 0 20px 0;
+  background-color: #3989c9; }
+.context-filmrecruitz .zone-footer-wrapper {
+  background-color: #3989c9; }
+
 .context-filmrecruitzz #zone-branding-wrapper {
   padding: 10px 0 20px 0;
   background-color: #3989c9; }
