--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -512,6 +512,16 @@ a {
 }
 
 /* Filmrecruitz */
+.context-filmrecruitz {
+  #zone-branding-wrapper {
+    padding:10px 0 20px 0;
+    background-color:#3989c9;
+  }
+  .zone-footer-wrapper {
+    background-color:#3989c9;
+  }
+}
+
 .context-filmrecruitzz {
   #zone-branding-wrapper {
     padding:10px 0 20px 0;
