--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -570,3 +570,8 @@ a {
   }
 }
 
+/* Webform */
+.webform-component--persoonsgegevens, .webform-component--over-mij {
+  float:left;
+  width:50%;
+}
