--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -580,5 +580,7 @@ a {
 .webform-component--persoonsgegevens, .webform-component--over-mij {
   float: left;
   width: 50%; }
+  .webform-component--persoonsgegevens span.fieldset-legend, .webform-component--over-mij span.fieldset-legend {
+    color: #3989c9; }
 
 /*# sourceMappingURL=global.css.map */
