--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -577,7 +577,7 @@ a {
   }
   float:left;
   width:50%;
-  label[for=edit-submitted-persoonsgegevens-geboorte-datum] {
+  label {
     font-size:12px;
   }
 }
