--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -580,4 +580,10 @@ a {
   label {
     font-size:12px;
   }
+  .webform-datepicker {
+    .select {
+      width:10%;
+      float:left;
+    }
+  }
 }
