--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -587,8 +587,9 @@ a {
   .webform-component--persoonsgegevens .webform-datepicker select, .webform-component--over-mij .webform-datepicker select {
     width: 11%;
     float: left; }
-  .webform-component--persoonsgegevens .input[type="submit"], .webform-component--over-mij .input[type="submit"] {
-    float: right;
-    margin-right: 10%; }
+
+.context-filmrecruitz .input[type="submit"] {
+  float: right;
+  margin-right: 10%; }
 
 /*# sourceMappingURL=global.css.map */
