--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -586,6 +586,9 @@ a {
       float:left;
     }
   }
+}
+
+.context-filmrecruitz {
   .input[type="submit"] {
     float:right;
     margin-right:10%;
