--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -589,7 +589,7 @@ a {
 }
 
 .context-filmrecruitz {
-  .input[type="submit"] {
+  input[type="submit"] {
     float:right;
     margin-right:10%;
   }
