--- a/sites/all/themes/default/css/default-alpha-default-normal.scss
+++ b/sites/all/themes/default/css/default-alpha-default-normal.scss
@@ -76,3 +76,28 @@
     }
   }
 }
+
+.context-filmrecruitzz {
+  .field-name-title {
+    width:50%;
+    h2 {
+      font-size:60px;
+    }
+  }
+  .field-name-field-inhoud2 {
+    width:50%;
+    .field-name-field-subititel {
+      font-size:35px;
+    }
+  }
+  .view-id-filmrecruitz {
+    margin-top:50px;
+    .views-row {
+      width:33.3%;
+      float:left;
+      img {
+        float:left;
+      }
+    }
+  }
+}
