--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -562,9 +562,9 @@ a {
     margin-top:50px;
     .views-row {
       width:100%;
-      float:left;
+      float:none;
       img {
-        float:left;
+        float:none;
       }
     }
   }
