--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -592,4 +592,15 @@ a {
   float: none;
   margin-right: 10%; }
 
+/* Search block */
+#search-block-form input[type="submit"] {
+  background: none;
+  position: absolute;
+  top: 0;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 100; }
+#search-block-form input[type="text"] {
+  background-color: #f78b1f; }
+
 /*# sourceMappingURL=global.css.map */
