--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -594,3 +594,18 @@ a {
     margin-right:10%;
   }
 }
+
+/* Search block */
+#search-block-form {
+  input[type="submit"] {
+    background: none;
+    position: absolute;
+    top: 0;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 100;
+  }
+  input[type="text"] {
+    background-color:$orange;
+  }
+}
